<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".cliente">

    <Button
        android:id="@+id/button3"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:onClick="PedirFace"
        android:text="@string/btface"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="312dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/etUsuario"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_face"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:text="@string/vacio"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:onClick="fecha_para_vacunacion"
        android:text="@string/btagendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cita" />

    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tvfecha"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <EditText
        android:id="@+id/et_cita"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/etcita"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_face" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:text="@string/tvadvertencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cita" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:onClick="ver_cita"
        android:text="@string/btverrcita"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/et_cita" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:onClick="enviar"
        android:text="@string/btenviar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etm_sintomas" />

    <EditText
        android:id="@+id/etm_sintomas"
        android:layout_width="300dp"
        android:layout_height="142dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/etmsintomas"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_doctor" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="asignardoc"
        android:text="@string/btasigdoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

    <TextView
        android:id="@+id/tv_doctor"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha"
        tools:text="@string/tvdoctor" />

</androidx.constraintlayout.widget.ConstraintLayout>