<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/etnombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="304dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:entries="@array/pobla_a_la_que_pertenece"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ciumunici" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="165dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_celular" />

    <EditText
        android:id="@+id/et_cedula"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etcedula"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellido" />

    <EditText
        android:id="@+id/et_celular"
        android:layout_width="165dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/etcelular"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellido" />

    <EditText
        android:id="@+id/et_edad"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etedad"
        android:inputType="number|textCapCharacters"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_celular" />

    <EditText
        android:id="@+id/et_ciumunici"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etciudadmuni"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edad" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="165dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/etapellido"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:onClick="Registrar"
        android:text="@string/btregis"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="165dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/etcorreo"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>