<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".representante">

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="ingresar_vacunas_rcibidas"
        android:text="@string/btingrevacuans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="consultar_pacientes_sin_vacunar_por_fase"
        android:text="@string/btconsultar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvconsulta2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/tv_vacunados"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/vacio"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="consultar_pacientes_segunda_dosis_por_vacunar"
        android:text="@string/btconsultar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/et_nvacunas"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/etnvavcunas"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvconsulta3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvconsulta1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:onClick="consultar_paceintes_vacunados"
        android:text="@string/btconsultar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_sinface2"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/vacio"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_facesinvacu"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/vacio"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tv_userr"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp"
        android:text="@string/etUsuario"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvingresarvacunas"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userr" />

</androidx.constraintlayout.widget.ConstraintLayout>